# emoji-skos

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: emoji-skos-firefighter.drawio  emoji-skos-woman-firefighter.drawio
emoji_skos/: __init__.py  broader.rq  cli.py  same_as.rq
emoji_skos/cli/: cli.py
emoji_skos/data/: __init__.py  alexmick.py  carpedm20.py  exact_match.rq
emoji_skos/data/core/: __init__.py  alexmick.py  carpedm20.py
emoji_skos/data/relations/: __init__.py  relations.json  relations.py
emoji_skos/util/: list.py
